--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     },
     "dependencies": {
         "@tailwindcss/typography": "^0.5.16",
+        "@vueform/multiselect": "^2.6.11",
         "lodash": "^4.17.21",
-        "pinia": "^3.0.2"
+        "pinia": "^3.0.2",
+        "vue-select": "^4.0.0-beta.6"
     }
 }
