--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
+        "opcodesio/log-viewer": "*",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
